# FrontierScience-Bench

./: .env.example  .gitignore  README.md  Verdict_Framework_Testing.ipynb  pyproject.toml  sample.py
data/: ground_truth.pkl  redacted_papers.pkl
prompts/: judge_prompt.txt  outline_prompt.txt  writing_prompt.txt
